--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js" 
   },
   "keywords": [
     "quiz",
@@ -13,6 +14,9 @@
     "express",
     "node"
   ],
+  "engines": {
+    "node": "18.x" 
+  },
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
@@ -20,5 +24,8 @@
     "dotenv": "^17.1.0",
     "express": "^4.18.2",
     "mongoose": "^8.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15" 
   }
 }
